--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,8 @@ plugins:
 collections:
   evts:
     output: true
+  tabs:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
