--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 # theme: minima
-theme: no-style-please
+# theme: no-style-please
 plugins:
   - jekyll-feed
 
@@ -40,6 +40,13 @@ collections:
     output: true
   tabs:
     output: true
+    order:
+      - events.md
+      - travel-info.md
+      - qa.md
+      - gallery.md
+      - recos.md
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
