--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Voli
 email: orichardson95@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Voli (= Oliver Richardson + Varsha Kishore) wedding website
 # the subpath of your site, e.g. /blog
 # baseurl: "voli-wedding/" 
 baseurl: "voli/" 
