--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Voli
-email: orichardson95@gmail.com
+title: Shraito
+email: kaitonakatani1998@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Voli (= Oliver Richardson + Varsha Kishore) wedding website
+  Shreya and Kaito's wedding website
 # the subpath of your site, e.g. /blog
 # baseurl: "voli-wedding/" 
-baseurl: "voli/"
+baseurl: "shraito/"
 # baseurl: "" 
-url: "https://orichardson.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kaito-nakatani.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
